[package]
name = "kantara-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Gilang Ramadhan <muhgilangramadhan.3011@gmail.com>"]
description = "A high-performance reverse proxy server and web server implementation using Rust"
readme = "README.md"
repository = "https://bitbucket.org/imkhq/kantara-test-gilang-rust"
license = "MIT"
keywords = ["proxy", "reverse-proxy", "http", "server"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
futures-util = "0.3.31"
reqwest = { version = "0.11.27", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"
log = "0.4.20"
env_logger = "0.11.0"
clap = { version = "4.5.4", features = ["derive"] }
num_cpus = "1.16.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
